Allow Java to be debugged by passing the JVM args as an environment variable