@@ -17,3 +17,55 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile).configureEach {
+    doFirst {
+        exec {
+            workingDir = file('../')
+            commandLine 'xmake', 'build', '-y'
+        }
+    }
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
+
+tasks.register('runEngine', EngineExec) {
+    dependsOn("build")
+}
+
+// This class is used to run the engine executable and extend the JavaExec task to
+// get the JVM arguments generated by the IDE
+class EngineExec extends JavaExec {
+    @Override
+    void exec() {
+        List<String> jvmArgs = this.getJvmArgs()
+        def args = jvmArgs.collect { it.replace('\\', '\\\\').replace('"', '\\"') }.join(' ')
+
+        def output = new ByteArrayOutputStream()
+        project.exec {
+            workingDir = project.file('../')
+            environment 'XMAKE_COLORTERM', 'nocolor'
+            commandLine 'xmake', 'show', '-t', 'Engine'
+            standardOutput = output
+        }
+
+        def lines = output.toString().readLines()
+        def targetLine = lines.find { it.trim().startsWith('targetfile:') }
+        if (targetLine) {
+            def path = targetLine.split(':', 2)[1].trim()
+            def executable = path.replace('\\', '/')
+            def absolutePath = project.file('../' + executable).getAbsolutePath()
+            project.exec {
+                workingDir = project.file('../Engine')
+                environment 'JVM_ARGS', args
+                commandLine absolutePath
+            }
+        } else {
+            throw new GradleException("Could not find the engine executable (targetfile in 'xmake show' output is missing)")
+        }
+    }
+}
